Refactorize interfaces and add new test cases Refactorize core. Add test cases for:CFileFs, CFileFsAttribute, CFileFsEnum Add binaries for testing purpose

--- a/tests/Unittests/Unittests.vcxproj
+++ b/tests/Unittests/Unittests.vcxproj
@@ -148,7 +148,10 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="FileFsAttribute_unittest.cpp" />
+    <ClCompile Include="FileFsEnum_unittest.cpp" />
     <ClCompile Include="FileFsStream_unittest.cpp" />
+    <ClCompile Include="FileFs_unittest.cpp" />
     <ClCompile Include="main.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
