--- a/appveyor.yml
+++ b/appveyor.yml
@@ -29,8 +29,14 @@ clone_folder: c:\projects\TinyAntivirus
 # environment variables
 environment:
   SAMPLE_DIR: c:\projects\TinyAntivirus\tests\samples
-  PLATFORM: x86
   CONFIGURATION: Release
+  matrix:
+  # x86
+  - PLATFORM: x86
+  
+  # x64
+  - PLATFORM: x64
+
 
 #---------------------------------#
 #       build configuration       #
