--- a/appveyor.yml
+++ b/appveyor.yml
@@ -30,12 +30,7 @@ clone_folder: c:\projects\TinyAntivirus
 environment:
   SAMPLE_DIR: c:\projects\TinyAntivirus\tests\samples
   CONFIGURATION: Release
-  matrix:
-  # x86
-  - PLATFORM: x86
-  
-  # x64
-  - PLATFORM: x64
+  PLATFORM: x86
 
 
 #---------------------------------#
