Improve sality detection method and fix bugs in core modules add kmp algorithm implementation use kmp search to find sality code. fixed: static library name: gtest.lib, zlibstatic.lib build script supports both Debug and Release configuration

--- a/TinyAvCore/TinyAvCore.vcxproj
+++ b/TinyAvCore/TinyAvCore.vcxproj
@@ -50,6 +50,7 @@
     <ClInclude Include="FileSystem\zip\ZipFsAttribute.h" />
     <ClInclude Include="FileSystem\zip\ZipFsEnum.h" />
     <ClInclude Include="FileType\PeFileParser.h" />
+    <ClInclude Include="kmp.h" />
     <ClInclude Include="Module\ModuleMgrService.h" />
     <ClInclude Include="Scanner\ScanService.h" />
     <ClInclude Include="Utils.h" />
@@ -80,6 +81,7 @@
     <ClCompile Include="FileSystem\zip\ZipFsAttribute.cpp" />
     <ClCompile Include="FileSystem\zip\ZipFsEnum.cpp" />
     <ClCompile Include="FileType\PeFileParser.cpp" />
+    <ClCompile Include="kmp.cpp" />
     <ClCompile Include="Module\ModuleMgrService.cpp" />
     <ClCompile Include="Scanner\ScanService.cpp" />
     <ClCompile Include="Utils.cpp" />
